external-crates/move/crates/move-compiler/tests/move_check/parser/duplicate_attributes.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
warning[W02018]: unknown attribute
  ┌─ tests/move_check/parser/duplicate_attributes.move:2:7
  │
2 │     #[a, a(x = 0)]
  │       ^ Unknown attribute 'a'. Custom attributes must be wrapped in 'ext', e.g. #[ext(a)]

error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/parser/duplicate_attributes.move:2:10
  │
2 │     #[a, a(x = 0)]
  │       -  ^^^^^^^^ Duplicate attribute 'a' attached to the same item
  │       │   
  │       Attribute previously given here

warning[W02018]: unknown attribute
  ┌─ tests/move_check/parser/duplicate_attributes.move:5:7
  │
5 │     #[b(a, a = 0, a(x = 1))]
  │       ^ Unknown attribute 'b'. Custom attributes must be wrapped in 'ext', e.g. #[ext(b)]

error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/parser/duplicate_attributes.move:5:12
  │
5 │     #[b(a, a = 0, a(x = 1))]
  │         -  ^^^^^ Duplicate attribute 'a' attached to the same item
  │         │   
  │         Attribute previously given here

error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/parser/duplicate_attributes.move:5:19
  │
5 │     #[b(a, a = 0, a(x = 1))]
  │         -         ^^^^^^^^ Duplicate attribute 'a' attached to the same item
  │         │          
  │         Attribute previously given here
